api/gtkdoc_h/239/geany-gtkdoc.h


typedef enum {
	COLOR_RED,
	COLOR_DARK_RED,
	COLOR_BLACK,
	COLOR_BLUE,
} MsgColors;
typedef enum {
	MSG_STATUS = 0,
	MSG_COMPILER,
	MSG_MESSAGE,
	MSG_SCRATCH,
	MSG_VTE,
} MessageWindowTabNum;
typedef enum {
	SPAWN_ASYNC = 0x00,
	SPAWN_SYNC = 0x01,
	SPAWN_LINE_BUFFERED = 0x00,
	SPAWN_STDOUT_UNBUFFERED = 0x02,
	SPAWN_STDERR_UNBUFFERED = 0x04,
	SPAWN_UNBUFFERED = 0x06,
	SPAWN_STDIN_RECURSIVE = 0x08,
	SPAWN_STDOUT_RECURSIVE = 0x10,
	SPAWN_STDERR_RECURSIVE = 0x20,
	SPAWN_RECURSIVE = 0x38,
} SpawnFlags;
typedef enum {
	tm_tag_undef_t = 0,
	tm_tag_class_t = 1,
	tm_tag_enum_t = 2,
	tm_tag_enumerator_t = 4,
	tm_tag_field_t = 8,
	tm_tag_function_t = 16,
	tm_tag_interface_t = 32,
	tm_tag_member_t = 64,
	tm_tag_method_t = 128,
	tm_tag_namespace_t = 256,
	tm_tag_package_t = 512,
	tm_tag_prototype_t = 1024,
	tm_tag_struct_t = 2048,
	tm_tag_typedef_t = 4096,
	tm_tag_union_t = 8192,
	tm_tag_variable_t = 16384,
	tm_tag_externvar_t = 32768,
	tm_tag_macro_t = 65536,
	tm_tag_macro_with_arg_t = 131072,
	tm_tag_file_t = 262144,
	tm_tag_other_t = 524288,
	tm_tag_max_t = 1048575,
} TMTagType;
typedef enum {
	tm_tag_attr_none_t = 0,
	tm_tag_attr_name_t = 1,
	tm_tag_attr_type_t = 2,
	tm_tag_attr_file_t = 4,
	tm_tag_attr_line_t = 8,
	tm_tag_attr_pos_t = 16,
	tm_tag_attr_scope_t = 32,
	tm_tag_attr_inheritance_t = 64,
	tm_tag_attr_arglist_t = 128,
	tm_tag_attr_local_t = 256,
	tm_tag_attr_time_t = 512,
	tm_tag_attr_vartype_t = 1024,
	tm_tag_attr_access_t = 2048,
	tm_tag_attr_impl_t = 4096,
	tm_tag_attr_lang_t = 8192,
	tm_tag_attr_inactive_t = 16384,
	tm_tag_attr_pointer_t = 32768,
	tm_tag_attr_max_t = 65535,
} TMTagAttrType;
typedef struct GeanyDocument GeanyDocument;
typedef struct GeanyKeyGroup GeanyKeyGroup;
typedef struct GeanyKeyBinding GeanyKeyBinding;
typedef gboolean(* GeanyKeyBindingFunc) (GeanyKeyBinding *key, guint key_id, gpointer user_data);
typedef void(* SpawnReadFunc) (GString *string, GIOCondition condition, gpointer data);
struct GeanyDocument {
	gboolean is_valid;
	gint index;
	gboolean has_tags;
	gchar* file_name;
	gchar* encoding;
	gboolean has_bom;
	GeanyEditor* editor;
	GeanyFiletype* file_type;
	TMSourceFile* tm_file;
	gboolean readonly;
	gboolean changed;
	gchar* real_path;
	guint id;
	struct GeanyDocumentPrivate* priv;
};
struct GeanyKeyBinding {
	guint key;
	GdkModifierType mods;
	gchar* name;
	gchar* label;
	GeanyKeyCallback callback;
	GtkWidget* menu_item;
	guint id;
	guint default_key;
	GdkModifierType default_mods;
	GeanyKeyBindingFunc cb_func;
	gpointer cb_data;
	GDestroyNotify cb_data_destroy;
};
gboolean dialogs_show_save_as (void);
gchar* dialogs_show_input (const gchar *title, GtkWindow *parent, const gchar *label_text, const gchar *default_text);
gboolean dialogs_show_input_numeric (const gchar *title, const gchar *label_text, gdouble *value, gdouble min, gdouble max, gdouble step);
const gchar* encodings_get_charset_from_index (gint idx);
gchar* encodings_convert_to_utf8_from_charset (const gchar *buffer, gssize size, const gchar *charset, gboolean fast);
gchar* encodings_convert_to_utf8 (const gchar *buffer, gssize size, gchar **used_encoding);
GdkModifierType keybindings_get_modifiers (GdkModifierType mods);
GeanyKeyBinding* keybindings_get_item (GeanyKeyGroup *group, gsize key_id);
GeanyKeyBinding* keybindings_set_item_full (GeanyKeyGroup *group, gsize key_id, guint key, GdkModifierType mod, const gchar *kf_name, const gchar *label, GtkWidget *menu_item, GeanyKeyBindingFunc cb, gpointer pdata, GDestroyNotify destroy_notify);
void keybindings_load_keyfile (void);
void keybindings_send_command (guint group_id, guint key_id);
gboolean main_is_realized (void);
void main_locale_init (const gchar *locale_dir, const gchar *package);
void main_reload_configuration (void);
void msgwin_set_messages_dir (const gchar *messages_dir);
void msgwin_switch_tab (gint tabnum, gboolean show);
void msgwin_clear_tab (gint tabnum);
gboolean navqueue_goto_line (GeanyDocument *old_doc, GeanyDocument *new_doc, gint line);
void plugin_cleanup ();