api/geany-1.0.vapi

	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_KEYS_", has_type_id = false)]
	public enum KeyBindingID {
		EDITOR_TRANSPOSELINE,
		DOCUMENT_REMOVE_ERROR_INDICATORS,
		FOCUS_SEARCHBAR,
		SEARCH_FIND,
		FILE_SAVEALL,
		GOTO_NEXTMARKER,
		NOTEBOOK_SWITCHTABLEFT,
		VIEW_ZOOMOUT,
		GOTO_LINE,
		DOCUMENT_TOGGLEFOLD,
		BUILD_COMPILE,
		EDITOR_SCROLLTOLINE,
		DOCUMENT_UNFOLDALL,
		GOTO_MATCHINGBRACE,
		SEARCH_FINDDOCUMENTUSAGE,
		CLIPBOARD_PASTE,
		BUILD_MAKE,
		INSERT_ALTWHITESPACE,
		EDITOR_SCROLLLINEDOWN,
		VIEW_TOGGLEALL,
		VIEW_FULLSCREEN,
		GOTO_LINEEND,
		EDITOR_CALLTIP,
		FILE_PRINT,
		EDITOR_DUPLICATELINE,
		FOCUS_SCRIBBLE,
		TOOLS_OPENCOLORCHOOSER,
		SEARCH_PREVIOUSMESSAGE,
		FILE_CLOSE,
		DOCUMENT_REPLACETABS,
		FILE_RELOAD,
		SEARCH_FINDNEXTSEL,
		FOCUS_MESSAGES,
		BUILD_RUN,
		HELP_HELP,
		SETTINGS_PLUGINPREFERENCES,
		VIEW_ZOOMRESET,
		SELECT_WORD,
		FORMAT_INCREASEINDENT,
		SETTINGS_PREFERENCES,
		FORMAT_SENDTOCMD3,
		DOCUMENT_FOLDALL,
		FORMAT_SENDTOVTE,
		PROJECT_PROPERTIES,
		DOCUMENT_LINEWRAP,
		EDITOR_MACROLIST,
		EDITOR_SUPPRESSSNIPPETCOMPLETION,
		FOCUS_SIDEBAR_SYMBOL_LIST,
		GOTO_LINESTART,
		SEARCH_FINDUSAGE,
		FILE_NEW,
		EDITOR_SNIPPETNEXTCURSOR,
		NOTEBOOK_SWITCHTABRIGHT,
		FILE_SAVE,
		FORMAT_INCREASEINDENTBYSPACE,
		SEARCH_FINDNEXT,
		GOTO_TOGGLEMARKER,
		GOTO_TAGDEFINITION,
		SEARCH_NEXTMESSAGE,
		EDITOR_DELETELINETOEND,
		FORMAT_AUTOINDENT,
		FILE_OPENSELECTED,
		GOTO_BACK,
		INSERT_DATE,
		BUILD_PREVIOUSERROR,
		GOTO_LINEENDVISUAL,
		DOCUMENT_REPLACESPACES,
		FOCUS_EDITOR,
		SELECT_WORDPARTRIGHT,
		VIEW_MESSAGEWINDOW,
		FOCUS_SIDEBAR_DOCUMENT_LIST,
		FORMAT_REFLOWPARAGRAPH,
		EDITOR_MOVELINEUP,
		NOTEBOOK_MOVETABLEFT,
		SELECT_LINE,
		EDITOR_UNDO,
		EDITOR_MOVELINEDOWN,
		CLIPBOARD_COPYLINE,
		BUILD_MAKEOWNTARGET,
		FORMAT_SENDTOCMD2,
		SEARCH_MARKALL,
		BUILD_LINK,
		FILE_CLOSEALL,
		GOTO_FORWARD,
		CLIPBOARD_CUT,
		NOTEBOOK_SWITCHTABLASTUSED,
		NOTEBOOK_MOVETABRIGHT,
		BUILD_OPTIONS,
		GOTO_TAGDECLARATION,
		FILE_OPEN,
		EDITOR_COMPLETESNIPPET,
		FORMAT_UNCOMMENTLINE,
		FOCUS_VTE,
		FORMAT_SENDTOCMD1,
		SELECT_WORDPARTLEFT,
		VIEW_ZOOMIN,
		DOCUMENT_LINEBREAK,
		EDITOR_REDO,
		EDITOR_CONTEXTACTION,
		SEARCH_FINDPREVSEL,
		FORMAT_DECREASEINDENTBYSPACE,
		FORMAT_COMMENTLINETOGGLE,
		SELECT_ALL,
		DOCUMENT_RELOADTAGLIST,
		BUILD_NEXTERROR,
		NOTEBOOK_MOVETABLAST,
		SELECT_PARAGRAPH,
		EDITOR_DELETELINE,
		CLIPBOARD_COPY,
		VIEW_SIDEBAR,
		FILE_SAVEAS,
		FORMAT_COMMENTLINE,
		GOTO_PREVWORDPART,
		SEARCH_FINDPREVIOUS,
		SEARCH_REPLACE,
		EDITOR_WORDPARTCOMPLETION,
		EDITOR_AUTOCOMPLETE,
		FOCUS_SIDEBAR,
		FOCUS_MESSAGE_WINDOW,
		NOTEBOOK_MOVETABFIRST,
		GOTO_PREVIOUSMARKER,
		EDITOR_SCROLLLINEUP,
		FOCUS_COMPILER,
		FORMAT_TOGGLECASE,
		CLIPBOARD_CUTLINE,
		DOCUMENT_REMOVE_MARKERS,
		BUILD_MAKEOBJECT,
		FORMAT_DECREASEINDENT,
		FILE_OPENLASTTAB,
		SEARCH_FINDINFILES,
		GOTO_NEXTWORDPART,
		INSERT_LINEAFTER,
		INSERT_LINEBEFORE,
		DOCUMENT_REMOVE_MARKERS_INDICATORS,
		PROJECT_OPEN,
		PROJECT_NEW,
		PROJECT_CLOSE,
		FORMAT_JOINLINES,
		GOTO_LINESTARTVISUAL,
		DOCUMENT_CLONE,
		FILE_QUIT,
		FILE_PROPERTIES,
		FORMAT_SENDTOCMD4,
		FORMAT_SENDTOCMD5,
		FORMAT_SENDTOCMD6,
		FORMAT_SENDTOCMD7,
		FORMAT_SENDTOCMD8,
		FORMAT_SENDTOCMD9,
		EDITOR_DELETELINETOBEGINNING,
		COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_KEY_GROUP_", has_type_id = false)]
	public enum KeyGroupID {
		FILE,
		PROJECT,
		EDITOR,
		CLIPBOARD,
		SELECT,
		FORMAT,
		INSERT,
		SETTINGS,
		SEARCH,
		GOTO,
		VIEW,
		FOCUS,
		NOTEBOOK,
		DOCUMENT,
		BUILD,
		TOOLS,
		HELP,
		COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "MessageWindowTabNum", cprefix = "MSG_", has_type_id = false)]
	public enum MessageWindowTabNum {
		STATUS,
		COMPILER,
		MESSAGE,
		SCRATCH,
		VTE
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "MsgColors", cprefix = "COLOR_", has_type_id = false)]
	public enum MsgColors {
		RED,
		DARK_RED,
		BLACK,
		BLUE
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_PROXY_", has_type_id = false)]
	public enum ProxyProbeResults {
		IGNORE,
		MATCH,
		RELATED
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "SpawnFlags", cprefix = "SPAWN_", has_type_id = false)]
	public enum SpawnFlags {
		ASYNC,
		SYNC,
		LINE_BUFFERED,
		STDOUT_UNBUFFERED,
		STDERR_UNBUFFERED,
		UNBUFFERED,
		STDIN_RECURSIVE,
		STDOUT_RECURSIVE,
		STDERR_RECURSIVE,
		RECURSIVE
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMTagAttrType", cprefix = "tm_tag_attr_", has_type_id = false)]
	public enum TMTagAttrType {
		[CCode (cname = "tm_tag_attr_none_t")]
		NONE_T,
		[CCode (cname = "tm_tag_attr_name_t")]
		NAME_T,
		[CCode (cname = "tm_tag_attr_type_t")]
		TYPE_T,
		[CCode (cname = "tm_tag_attr_file_t")]
		FILE_T,
		[CCode (cname = "tm_tag_attr_line_t")]
		LINE_T,
		[CCode (cname = "tm_tag_attr_pos_t")]
		POS_T,
		[CCode (cname = "tm_tag_attr_scope_t")]
		SCOPE_T,
		[CCode (cname = "tm_tag_attr_inheritance_t")]
		INHERITANCE_T,
		[CCode (cname = "tm_tag_attr_arglist_t")]
		ARGLIST_T,
		[CCode (cname = "tm_tag_attr_local_t")]
		LOCAL_T,
		[CCode (cname = "tm_tag_attr_time_t")]
		TIME_T,
		[CCode (cname = "tm_tag_attr_vartype_t")]
		VARTYPE_T,
		[CCode (cname = "tm_tag_attr_access_t")]
		ACCESS_T,
		[CCode (cname = "tm_tag_attr_impl_t")]
		IMPL_T,
		[CCode (cname = "tm_tag_attr_lang_t")]
		LANG_T,
		[CCode (cname = "tm_tag_attr_inactive_t")]
		INACTIVE_T,
		[CCode (cname = "tm_tag_attr_pointer_t")]
		POINTER_T,
		[CCode (cname = "tm_tag_attr_max_t")]
		MAX_T
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMTagType", cprefix = "tm_tag_", has_type_id = false)]
	public enum TMTagType {
		[CCode (cname = "tm_tag_undef_t")]
		UNDEF_T,
		[CCode (cname = "tm_tag_class_t")]
		CLASS_T,
		[CCode (cname = "tm_tag_enum_t")]
		ENUM_T,
		[CCode (cname = "tm_tag_enumerator_t")]
		ENUMERATOR_T,
		[CCode (cname = "tm_tag_field_t")]
		FIELD_T,
		[CCode (cname = "tm_tag_function_t")]
		FUNCTION_T,
		[CCode (cname = "tm_tag_interface_t")]
		INTERFACE_T,
		[CCode (cname = "tm_tag_member_t")]
		MEMBER_T,
		[CCode (cname = "tm_tag_method_t")]
		METHOD_T,
		[CCode (cname = "tm_tag_namespace_t")]
		NAMESPACE_T,
		[CCode (cname = "tm_tag_package_t")]
		PACKAGE_T,
		[CCode (cname = "tm_tag_prototype_t")]
		PROTOTYPE_T,
		[CCode (cname = "tm_tag_struct_t")]
		STRUCT_T,
		[CCode (cname = "tm_tag_typedef_t")]
		TYPEDEF_T,
		[CCode (cname = "tm_tag_union_t")]
		UNION_T,
		[CCode (cname = "tm_tag_variable_t")]
		VARIABLE_T,
		[CCode (cname = "tm_tag_externvar_t")]
		EXTERNVAR_T,
		[CCode (cname = "tm_tag_macro_t")]
		MACRO_T,
		[CCode (cname = "tm_tag_macro_with_arg_t")]
		MACRO_WITH_ARG_T,
		[CCode (cname = "tm_tag_file_t")]
		FILE_T,
		[CCode (cname = "tm_tag_other_t")]
		OTHER_T,
		[CCode (cname = "tm_tag_max_t")]
		MAX_T
	}
	[CCode (cheader_filename = "geanyplugin.h", instance_pos = 2.9)]
	public delegate bool KeyBindingFunc (Geany.KeyBinding key, uint key_id);
	[CCode (cheader_filename = "geanyplugin.h", has_target = false)]
	public delegate void KeyCallback (uint key_id);
	[CCode (cheader_filename = "geanyplugin.h", has_target = false)]
	public delegate bool KeyGroupCallback (uint key_id);
	[CCode (cheader_filename = "geanyplugin.h", instance_pos = 2.9)]
	public delegate bool KeyGroupFunc (Geany.KeyGroup group, uint key_id);
	[CCode (cheader_filename = "geanyplugin.h", has_target = false)]
	public delegate void SpawnReadFunc (GLib.StringBuilder string, GLib.IOCondition condition, void* data);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate void cleanup (Geany.Plugin p, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate Gtk.Widget configure (Geany.Plugin p, Gtk.Dialog parent, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate void help (Geany.Plugin p, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate bool init (Geany.Plugin p, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate void load (Geany.Plugin proxy, Geany.Plugin inferior, void** proxy_data, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate int probe (Geany.Plugin proxy, string filename, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	public delegate void unload (Geany.Plugin proxy, Geany.Plugin inferior, void* proxy_data, void* pdata);
	[CCode (cheader_filename = "geanyplugin.h")]
	[Version (since = "1.30")]
	public static int api_version ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "dialogs_show_input")]
	[Version (since = "0.20.")]
	public static string? dialogs_show_input (string title, Gtk.Window? parent, string? label_text, string? default_text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "dialogs_show_input_numeric")]
	[Version (since = "0.16")]
	public static bool dialogs_show_input_numeric (string title, string label_text, double value, double min, double max, double step);
	[CCode (cheader_filename = "geanyplugin.h", cname = "dialogs_show_save_as")]
	public static bool dialogs_show_save_as ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "encodings_convert_to_utf8")]
	public static string? encodings_convert_to_utf8 (string buffer, ssize_t size, out string used_encoding);
	[CCode (cheader_filename = "geanyplugin.h", cname = "encodings_convert_to_utf8_from_charset")]
	public static string encodings_convert_to_utf8_from_charset (string buffer, ssize_t size, string charset, bool fast);
	[CCode (cheader_filename = "geanyplugin.h", cname = "encodings_get_charset_from_index")]
	[Version (since = "0.13")]
	public static unowned string? encodings_get_charset_from_index (int idx);
	[CCode (cheader_filename = "geanyplugin.h", cname = "keybindings_get_item")]
	[Version (since = "0.19.")]
	public static unowned Geany.KeyBinding keybindings_get_item (Geany.KeyGroup group, size_t key_id);
	[CCode (cheader_filename = "geanyplugin.h", cname = "keybindings_get_modifiers")]
	[Version (since = "1.25.")]
	public static Gdk.ModifierType keybindings_get_modifiers (Gdk.ModifierType mods);
	[CCode (cheader_filename = "geanyplugin.h", cname = "keybindings_load_keyfile")]
	[Version (since = "1.32")]
	public static void keybindings_load_keyfile ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "keybindings_send_command")]
	public static void keybindings_send_command (uint group_id, uint key_id);
	[CCode (cheader_filename = "geanyplugin.h", cname = "keybindings_set_item_full")]
	[Version (since = "1.26")]
	public static unowned Geany.KeyBinding keybindings_set_item_full (Geany.KeyGroup group, size_t key_id, uint key, Gdk.ModifierType mod, string kf_name, string label, Gtk.Widget? menu_item, owned Geany.KeyBindingFunc? cb);
	[CCode (cheader_filename = "geanyplugin.h", cname = "main_is_realized")]
	[Version (since = "0.19")]
	public static bool main_is_realized ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "main_locale_init")]
	[Version (since = "0.16")]
	public static void main_locale_init (string locale_dir, string package);
	[CCode (cheader_filename = "geanyplugin.h", cname = "main_reload_configuration")]
	[Version (since = "0.15")]
	public static void main_reload_configuration ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "msgwin_clear_tab")]
	[Version (since = "0.15")]
	public static void msgwin_clear_tab (int tabnum);
	[CCode (cheader_filename = "geanyplugin.h", cname = "msgwin_set_messages_dir")]
	public static void msgwin_set_messages_dir (string messages_dir);
	[CCode (cheader_filename = "geanyplugin.h", cname = "msgwin_switch_tab")]
	[Version (since = "0.15")]
	public static void msgwin_switch_tab (int tabnum, bool show);
	[CCode (cheader_filename = "geanyplugin.h", cname = "navqueue_goto_line")]
	public static bool navqueue_goto_line (Geany.Document old_doc, Geany.Document new_doc, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_cleanup")]
	public static void plugin_cleanup ();
